<resources>
    <string name="app_name">Clock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm">Будильник</string>
    <string name="stop_watcher">Секундомер</string>
    <string name="timer">Таймер</string>
    <string name="often_timer">Часто используемы таймеры</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="ready">Готово</string>
    <string name="input">Ввести</string>
    <string name="delete">Удалить</string>
    <string name="description">Описание</string>
    <string name="add_timer">Добавить таймер</string>
    <string name="template_time">%s:%s:%s</string>
    <string name="finish_time">Время вышло</string>
    <string name="interval">Интервал</string>
    <string name="time_segment">Время отрезка</string>
    <string name="all">Всего</string>
</resources>