<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/description"
                android:textColor="@color/textCardView"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/secondary">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameTimer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input"
                    android:maxLength="30"
                    android:inputType="text"
                    android:textColor="@color/textCardView"/>
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp">

            <NumberPicker
                android:id="@+id/dialogHourNumPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/DialogNumberPickerTheme"/>

            <NumberPicker
                android:id="@+id/dialogMinuteNumPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/DialogNumberPickerTheme"/>

            <NumberPicker
                android:id="@+id/dialogSecondNumPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/DialogNumberPickerTheme"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/background"
            android:padding="0dp"
            android:text="@string/cancel"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:rippleColor="@color/put_btn" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_timer"
            android:textColor="@color/textCardView"
            android:textSize="18sp"
            android:textStyle="bold"
            app:rippleColor="@color/put_btn" />

        <Button
            android:id="@+id/btnReady"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/background"
            android:padding="0dp"
            android:text="@string/ready"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:rippleColor="@color/put_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>